*--Changelog--*

4/16/2020
- Seen / Unseen message
- new SearchActivity
- Database improve, create chatlist to show in ChatsFragment
- Login/Register progressing response (prevent users click button many times)
4/18/2020
- Notification
4/19/2020
- Profile Activity
- Build SearchActivity instead SearchFragment
                                                   + use card view for search result
                                                   + improve search box and search result
                                                   + search keyboard layout and ActionListener
4/20/2020
- Notify unread number on chatlist