@@ -15,3 +15,4 @@
                                                    + search keyboard layout and ActionListener
 4/20/2020
 - Notify unread number on chatlist
+- Dont send noti of that user while chatting with that user
